# goit-web-hw-module-5

./: main.py  pyproject.toml
web_files/: main.css  server.py
web_server/: index.html  main.js  server.py
