[tool.poetry]
name = "python-web-module-5"
version = "0.1.0"
description = ""
authors = ["Deminform <deminform@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.32.3"
aiopath = "^0.7.7"
aioshutil = "^1.5"
aiohttp = "^3.10.5"
websockets = "^13.0.1"
names = "^0.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
